refactor: update services to use User domain record and persistence port